# starlord

./: ARCHITECTURE.md  CONTRIBUTING.md  INTERFACE.md  MOBILE.md  README.md  ROADMAP.md  VOICE.md  pyproject.toml
mobile/android/: README.md
mobile/ios/: README.md
src/starlord/: __init__.py  app.py  command_system.py  gui.py  gui_qt.py  memory_store.py  settings_store.py  system_tray.py  tasks.py
src/starlord/api/: server.py
src/starlord/config/: settings.py
src/starlord/core/: agent.py  memory.py  router.py
src/starlord/io/: speech_in.py  speech_out.py  text_io.py  voice.py
src/starlord/plugins/: base.py  manager.py
src/starlord/skills/: coding_helper.py  personal_assistant.py  smart_home.py
src/starlord/tools/: browser.py  files.py  github.py  iot.py  system.py
tests/: test_gui_qt.py  test_smoke.py
